# agent-pr-reviewer

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CODEBASE_FLOW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPEN_SOURCE_STANDARDS_ASSESSMENT.md  PUBLICATION_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
app/: config.py  errors.py  graph.py  models.py  server.py  state.py
app/nodes/: analyze.py  fetch.py  publish.py  review.py  validate.py
app/services/: github.py  rag.py  slack.py
app/utils/: diff.py  metrics.py  prompts.py  tokens.py
docs/: ARCHITECTURE_GUIDE.md  DEPLOYMENT.md  EXECUTION_FLOWS.md  QUICK_REFERENCE.md  README.md  SETUP.md  TESTING.md
examples/: webhook_payload_example.json
scripts/: validate_setup.py
tests/: test_diff.py  test_error_scenarios.py  test_github.py  test_graph.py  test_metrics.py  test_models.py  test_prompts.py  test_rag.py  test_server.py
