[project]
name = "pr-review-agent"
version = "1.0.0"
description = "AI-powered PR code review agent using LangGraph and RAG"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kwanso", email = "info@kwanso.com"}]
readme = "README.md"
keywords = ["github", "code-review", "ai", "langgraph", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langchain-google-genai",
    "langchain-community",
    "langchain-text-splitters",
    "faiss-cpu",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "slack-sdk",
    "pyyaml",
    "structlog",
    "python-dotenv",
    "PyJWT[cryptography]",
]

[project.urls]
Repository = "https://github.com/kwanso-khalid/kwanso-agent-pr"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "respx"]

[project.scripts]
pr-review = "app.server:main"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
